--- a/04-react-todos-lab/package.json
+++ b/04-react-todos-lab/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "json-server --port 9000 db.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
